---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 1)
A ::= #"qa|B|a"(ID: 0,type: DFA);
S ::= except!(#'c',10)(ID: 0,type: DFA) | except!(#'qa|B|a')(ID: 1,type: DFA) | except!(#'c')(ID: 0,type: DFA);
